[project]
name = "climate-almanac"
version = "0.1.0"
description = "An open, versioned index of public climate data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0",
]

# This repo is tools + data, not an importable package. Tell setuptools there is
# nothing to discover so `pip install -e .` doesn't choke on the schema/ and
# catalog/ directories.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

# Lint configuration mirrors the Willow fleet conventions so code written here
# stays consistent with the rest of the stack. Run `ruff check .` before pushing.
[tool.ruff]
target-version = "py311"
extend-exclude = [
    ".venv",
    ".venv-dev",
    "__pycache__",
]

[tool.ruff.lint.per-file-ignores]
# Scripts bootstrap sys.path / argparse before imports in places.
"scripts/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
